...
                Text(text = "${stringResource(R.string.PhotoPrice)} ${basketItem.photoPrice}")
            }
            Column(horizontalAlignment = Alignment.End) {
                IconButton(onClick = { basketViewModel.onEvent(BasketEvent.DeletePhoto(basketItem)) }) {
                    Icon(
                        imageVector = Icons.Default.Delete,
                        contentDescription = "Delete",
                    )
                }
            }
        }
    }
}
